--- a/GUI/goal-tracker/src/components/goal-node/goal_node.css
+++ b/GUI/goal-tracker/src/components/goal-node/goal_node.css
@@ -1,10 +1,7 @@
-/* div{
-    color: blueviolet;
-} */
 .status {
-    color: blueviolet;
     text-align: right;
     font-size: 0.75rem;
+    color: rgb(67, 65, 65);
 }
 
 .ellipsis {
@@ -41,14 +38,48 @@
     border-radius: 50%;
     display: inline-block;
     margin-right: 2px;
+    /* border: 1px solid cornsilk; */
 }
 
-.subtask{
+.subtask {
     font-size: 0.8rem;
     margin: 2px;
 }
 
-.goal-footer{
+.goal-footer {
     font-size: 0.75rem;
     text-align: right;
+}
+
+
+.bg-terminated {
+    background-color: #c3cbd3;
+}
+
+.bg-terminated-dot {
+    background-color: #858b91;
+}
+
+.bg-not-started {
+    background-color: #eeb5b5;
+}
+
+.bg-not-started-dot {
+    background-color: #b43434;
+}
+
+.bg-in-progress {
+    background-color: #F1DBA9;
+}
+
+.bg-in-progress-dot {
+    background-color: #ce9e2f;
+}
+
+.bg-completed {
+    background-color: #7ae6b7;
+}
+
+.bg-completed-dot {
+    background-color: #18ab6b;
 }
